indexining html files with different requiremnts

--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -1,10 +1,84 @@
+<!--Services headings:-->
+
+<!--Inside the section containing the h2 heading Services, add these elements right after the h2:-->
+<!--create a level 3 heading with text Design & Concept-->
+<!--create a level 3 heading with text Digital Strategy-->
+<!--create a level 3 heading with text Content Strategy-->
+<!--create a level 3 heading with text UX Design-->
+<!--create a level 3 heading with text Web Development-->
+<!--create a level 3 heading with text Social Media-->
+<!--Works headings:-->
+
+<!--Inside the section containing the h2 heading Works:-->
+<!--in the first article, replace the text with a level 3 heading with text Interior Design-->
+<!--in the second article, replace the text with a level 3 heading with text Web Development-->
+<!--in the third article, replace the text with a level 3 heading with text Personal Brand-->
+<!--About Us headings:-->
+
+<!--Inside the section containing the h2 heading About Us, after the h2 heading, create these elements in this order:-->
+<!--a level 3 heading with text Who are we-->
+<!--a level 3 heading with text Our culture-->
+<!--a level 3 heading with text How we work-->
+<!--Latest news headings:-->
+
+<!--Inside the section containing the h2 heading Latest news:-->
+<!--in the first article replace the text with a level 3 heading with text Hoc loco tenere se Triarius non potuit.-->
+<!--in the second article replace the text with a level 3 heading with text Ut alios omittam, hunc appello, quem ille unum secutus est.-->
+<!--in the third article replace the text with a level 3 heading with text Bestiarum vero nullum iudicium puto.-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency"/>
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png"/>
 </head>
 <body>
-
+<header>
+    <nav></nav>
+</header>
+<main>
+    <h1>Homepage</h1>
+    <section><h2>We help you build your brand!</h2></section>
+    <section>
+        <h2>Services</h2>
+        <h3>Design & Concept</h3>
+        <h3>Digital Strategy</h3>
+        <h3>Content Strategy</h3>
+        <h3>UX Design</h3>
+        <h3>Web Development</h3>
+        <h3>Social Media</h3>
+    </section>
+    <section>
+        <h2>Works</h2>
+        <article><h3>Interior Design</h3></article>
+        <article><h3>Web Development</h3></article>
+        <article><h3>Personal Brand</h3></article>
+    </section>
+    <section>
+        <h2>About Us</h2>
+        <h3>Who are we</h3>
+        <h3>Our culture</h3>
+        <h3>How we work</h3>
+    </section>
+    <section>
+        <h2>Latest news</h2>
+        <article><h3>Hoc loco tenere se Triarius non potuit.</h3></article>
+        <article><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></article>
+        <article><h3>Bestiarum vero nullum iudicium puto.</h3></article>
+    </section>
+    <section>
+        <h2>Testimonials</h2>
+        <article>Testimonial 1</article>
+        <article>Testimonial 2</article>
+        <article>Testimonial 3</article>
+    </section>
+    <section><h2>Contact</h2></section>
+</main>
+<footer>Footer</footer>
 </body>
 </html>
