--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -1,10 +1,28 @@
+<!--Header:-->
+
+<!--create the header of your page between the open and close body tag-->
+<!--put the text Header inside the header-->
+<!--Main:-->
+
+<!--create the main tag after the header tag-->
+<!--put the text Main content inside your main tags-->
+<!--Footer:-->
+
+<!--create the footer tag after the main tag-->
+<!--put the text Footer inside the footer tags-->
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico" />
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png" />
 </head>
 <body>
-
+<header>Header</header>
+<main>Main content</main>
+<footer>Footer</footer>
 </body>
 </html>
