--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -1,10 +1,37 @@
+<!--Copy the content of 3-index.html into 5-index.html-->
+<!--inside your <main> section-->
+<!--    remove the text in main, create these sections:-->
+<!--    create first section and put the text Hero section inside-->
+<!--    create second section and put the text Services section inside-->
+<!--    create third section and put the text Works section inside-->
+<!--    create fourth section and put the text About section inside-->
+<!--    create fifth section and put the text Latest news section inside-->
+<!--    create sixth section and put the text Testimonials section inside-->
+<!--    create seventh section and put the text Contact section inside-->
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico" />
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png" />
 </head>
 <body>
-
+<header>Header</header>
+<main>
+    <main>
+        <section>Hero section</section>
+        <section>Services section</section>
+        <section>Works section</section>
+        <section>About section</section>
+        <section>Latest news section</section>
+        <section>Testimonials section</section>
+        <section>Contact section</section>
+    </main>
+</main>
+<footer>Footer</footer>
 </body>
 </html>
