--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -1,10 +1,54 @@
+<!--Copy the content of 8-index.html into 9-index.html-->
+
+<!--in the section tag with the text Hero section, remove the text and create a level 2 heading with text We help you build your brand!-->
+<!--in the section tag with the text Services section, remove the text and create a level 2 heading with text Services-->
+<!--in the section tag with the text Works section, remove the text and create a level 2 heading with text Works-->
+<!--in the section tag with the text About section, remove the text and create a level 2 heading with text About Us-->
+<!--in the section tag with the text Latest news section, remove the text and create a level 2 heading with text Latest news-->
+<!--in the section tag with the text Testimonials section, remove the text and create a level 2 heading with text Testimonials-->
+<!--in the section tag with the text Contact section, remove
+ the text and create a level 2 heading with text Contact-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency"/>
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png"/>
 </head>
 <body>
-
+<header>
+    <nav></nav>
+</header>
+<main>
+    <h1>Homepage</h1>
+    <section><h2>We help you build your brand!</h2></section>
+    <section><h2>Services</h2></section>
+    <section>
+        <h2>Works</h2>
+        <article>Work 1</article>
+        <article>Work 2</article>
+        <article>Work 3</article>
+    </section>
+    <section><h2>About Us</h2></section>
+    <section>
+        <h2>Latest news</h2>
+        <article>Article 1</article>
+        <article>Article 2</article>
+        <article>Article 3</article>
+    </section>
+    <section>
+        <h2>Testimonials</h2>
+        <article>Testimonial 1</article>
+        <article>Testimonial 2</article>
+        <article>Testimonial 3</article>
+    </section>
+    <section><h2>Contact</h2></section>
+</main>
+<footer>Footer</footer>
 </body>
 </html>
