--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,10 +1,41 @@
+<!--Meta charset:-->
+<!--add a meta tag inside the head:-->
+<!--add the charset attribute with the value utf-8-->
+<!--Viewport:-->
+<!--add a meta tag inside the head:-->
+<!--add an attribute name on the tag and specify that it is the meta viewport-->
+<!--add the key width with the value device-width-->
+<!--add the key initial-scale with the value 1.0-->
+<!--add the key viewport-fit with the value cover-->
+<!--Title:-->
+<!--add the title tag just after the meta viewport with value: Homepage - Techium-->
+<!--Description:-->
+<!--add a meta tag inside the head section-->
+<!--add an attribute name on the tag and specify that is the meta description-->
+<!--add another attribute called content-->
+<!--add the following description: Techium is a digital agency-->
+<!--Favicons:-->
+<!--download the image above to use as a favicon-->
+<!--Use the tool at https://realfavicongenerator.net/ to generate all the favicon formats-->
+<!--take the favicon.ico and favicon.png and place these at the root of your project directory, so that it is siblings with your [0-9]+-index.html files.-->
+<!--inside the head, create 2 link tags with these 3 attributes: rel, type, and href.-->
+<!--the first link tag:-->
+<!--rel: icon-->
+<!--type: image/x-icon-->
+<!--href: ./favicon.ico-->
+<!--the second link tag:-->
+<!--rel: icon-->
+<!--type: image/png-->
+<!--href: ./favicon.png-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico" />
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png" />
 </head>
-<body>
-
-</body>
+<body></body>
 </html>
