--- a/0x00-html_advanced/7-index.html
+++ b/0x00-html_advanced/7-index.html
@@ -1,10 +1,48 @@
+<!--Copy the content of 6-index.html into 7-index.html-->
+
+<!--remove the Header text inside the <header>-->
+<!--    create the nav tag inside the header tag-->
+<!--    it should remain empty for now-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency"/>
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png"/>
 </head>
 <body>
-
+<header>
+    <nav></nav>
+</header>
+<main>
+    <section>Hero section</section>
+    <section>Services section</section>
+    <section>
+        Works section
+        <article>Work 1</article>
+        <article>Work 2</article>
+        <article>Work 3</article>
+    </section>
+    <section>About section</section>
+    <section>
+        Latest news section
+        <article>Article 1</article>
+        <article>Article 2</article>
+        <article>Article 3</article>
+    </section>
+    <section>
+        Testimonials section
+        <article>Testimonial 1</article>
+        <article>Testimonial 2</article>
+        <article>Testimonial 3</article>
+    </section>
+    <section>Contact section</section>
+</main>
+<footer>Footer</footer>
 </body>
 </html>
