--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -1,10 +1,22 @@
+<!--change the <title> to put: Article - Techium-->
+<!--    inside the main tags-->
+<!--    after the text, create the aside tags with text Aside-->
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico" />
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png" />
 </head>
 <body>
-
+<header>Header</header>
+<main>Main content
+<aside>Aside</aside>
+</main>
+<footer>Footer</footer>
 </body>
 </html>
