indexining html files with different requiremnts 2

--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -1,10 +1,41 @@
+<!--Copy the content of 3-index.html into 11-styleguide.html-->
+
+<!--change the title to Styleguide - Techium-->
+<!--remove the text from header, main, and footer-->
+<!--create a new <section> inside your main tag-->
+<!--    create a header in this section-->
+<!--    in the header add a level 2 heading with text Headings-->
+<!--    after the header:-->
+<!--    add a level 1 heading with text Heading level 1-->
+<!--    add a level 2 heading with text Heading level 2-->
+<!--    add a level 3 heading with text Heading level 3-->
+<!--    add a level 4 heading with text Heading level 4-->
+<!--    add a level 5 heading with text Heading level 5-->
+<!--    add a level 6 heading with text Heading level 6-->
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Styleguide - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico" />
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png" />
 </head>
 <body>
-
+<header></header>
+<main>
+    <section>
+        <header><h2>Headings</h2></header>
+        <h1>Heading level 1</h1>
+        <h2>Heading level 2</h2>
+        <h3>Heading level 3</h3>
+        <h4>Heading level 4</h4>
+        <h5>Heading level 5</h5>
+        <h6>Heading level 6</h6>
+    </section>
+</main>
+<footer></footer>
 </body>
 </html>
