--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -1,10 +1,124 @@
+<!--About Us paragraphs:-->
+
+<!--in the About Us section-->
+<!--after the first h3 (who are we) create a paragraph with the text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!-->
+<!--after the second h3 create a paragraph with the text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!-->
+<!--after the third h3 create a paragraph with the text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!-->
+<!--Latest news paragraphs:-->
+
+<!--in the Latest news section-->
+<!--in the first article-->
+<!--create a paragraph with text Career before the heading-->
+<!--create a paragraph with text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane? after the heading-->
+<!--in the second article-->
+<!--create a paragraph with text Digital Life before the heading-->
+<!--create a paragraph with text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama? after the heading-->
+<!--in the third article-->
+<!--create a paragraph with text Social before the heading-->
+<!--create a paragraph with text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones. after the heading-->
+<!--Contact paragraph:-->
+
+<!--in the Contact section after the heading-->
+<!--create a paragraph with the text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?-->
+<!--Additional paragraphs:-->
+
+<!--below the level 2 Services heading add a paragraph with text We work with you-->
+<!--below the level 2 Works heading add a paragraph with text Take a look in our portfolio-->
+<!--below the level 2 About Us heading add a paragraph with text Everything about us-->
+<!--below the level 2 Testimonials heading add a paragraph with text We are more than a digital company-->
+<!--below the level 2 Contact heading add a paragraph with text We like to know new people-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency"/>
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png"/>
 </head>
 <body>
-
+<header>
+    <nav></nav>
+</header>
+<main>
+    <h1>Homepage</h1>
+    <section><h2>We help you build your brand!</h2></section>
+    <section>
+        <h2>Services</h2>
+        <p>We work with you</p>
+        <h3>Design & Concept</h3>
+        <h3>Digital Strategy</h3>
+        <h3>Content Strategy</h3>
+        <h3>UX Design</h3>
+        <h3>Web Development</h3>
+        <h3>Social Media</h3>
+    </section>
+    <section>
+        <h2>Works</h2>
+        <p>Take a look in our portfolio</p>
+        <article><h3>Interior Design</h3></article>
+        <article><h3>Web Development</h3></article>
+        <article><h3>Personal Brand</h3></article>
+    </section>
+    <section>
+        <h2>About Us</h2>
+        <p>Everything about us</p>
+        <h3>Who are we</h3>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
+            quibusdam atque maxime cum!
+        </p>
+        <h3>Our culture</h3>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
+            quibusdam atque maxime cum!
+        </p>
+        <h3>How we work</h3>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
+            quibusdam atque maxime cum!
+        </p>
+    </section>
+    <section>
+        <h2>Latest news</h2>
+        <article>
+            <p>Career</p>
+            <h3>Hoc loco tenere se Triarius non potuit.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+        </article>
+        <article>
+            <p>Digital Life</p>
+            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
+                commodius agimus. An nisi populari fama?
+            </p>
+        </article>
+        <article>
+            <p>Social</p>
+            <h3>Bestiarum vero nullum iudicium puto.</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est
+                docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
+            </p>
+        </article>
+    </section>
+    <section>
+        <h2>Testimonials</h2>
+        <p>We are more than a digital company</p>
+        <article>Testimonial 1</article>
+        <article>Testimonial 2</article>
+        <article>Testimonial 3</article>
+    </section>
+    <section>
+        <h2>Contact</h2>
+        <p>We like to know new people</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+    </section>
+</main>
+<footer>Footer</footer>
 </body>
 </html>
