--- a/0x00-html_advanced/13-styleguide.html
+++ b/0x00-html_advanced/13-styleguide.html
@@ -1,10 +1,49 @@
+<!--After the existing section containing Headings, create a new section in main-->
+<!--in this section create a header-->
+<!--Inside the header, create a level 2 heading with text Paragraph-->
+<!--after the header add a level 2 heading with text Heading with a subtitle-->
+<!--after the level 2 heading, add a paragraph with text This is my subtitle-->
+<!--after the last paragraph, add another paragraph with text: Nunc lacinia-->
+<!--ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer -->
+<!--non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu -->
+<!--sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Styleguide - Techium</title>
+    <meta name="description" content="Techium is a digital agency"/>
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png"/>
 </head>
 <body>
-
+<header></header>
+<main>
+    <section>
+        <header><h2>Headings</h2></header>
+        <h1>Heading level 1</h1>
+        <h2>Heading level 2</h2>
+        <h3>Heading level 3</h3>
+        <h4>Heading level 4</h4>
+        <h5>Heading level 5</h5>
+        <h6>Heading level 6</h6>
+    </section>
+    <section>
+        <header>
+            <h2>Paragraph</h2>
+        </header>
+        <h2>Heading with a subtitle</h2>
+        <p>This is my subtitle</p>
+        <p>
+            Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
+            faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien
+            lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+        </p>
+    </section>
+</main>
+<footer></footer>
 </body>
 </html>
