--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -1,10 +1,87 @@
+<!--Copy the content of 26-styleguide.html into 28-styleguide.html-->
+
+<!--in main after Lists section-->
+<!--add a new line and a comment with the text Horizontal rule-->
+<!--create a new section-->
+<!--create a header and inside it add a level 2 heading with the text Horizontal rule-->
+<!--after the header create a div and put a horizontal rule in it-->
+
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Styleguide - Techium</title>
+    <meta name="description" content="Techium is a digital agency"/>
+    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico"/>
+    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png"/>
 </head>
 <body>
+<header></header>
+<main>
+    <section>
+        <header><h2>Headings</h2></header>
+        <h1>Heading level 1</h1>
+        <h2>Heading level 2</h2>
+        <h3>Heading level 3</h3>
+        <h4>Heading level 4</h4>
+        <h5>Heading level 5</h5>
+        <h6>Heading level 6</h6>
+    </section>
+    <section>
+        <header>
+            <h2>Paragraph</h2>
+        </header>
+        <h2>Heading with a subtitle</h2>
+        <p>This is my subtitle</p>
+        <p>
+            Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien
+            lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+        </p>
+    </section>
 
+    <br />
+    <!-- Lists -->
+    <section>
+        <header>
+            <h2>Lists</h2>
+            <div>
+                <h3>Unordered</h3>
+                <ul>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ul>
+                <h3>Ordered</h3>
+                <ol>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ol>
+                <h3>Definition</h3>
+                <dl>
+                    <dt>Definition List title</dt>
+                    <dd>Definition text.</dd>
+                    <dt>Startup</dt>
+                    <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                    <dt>Water</dt>
+                    <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                </dl>
+            </div>
+        </header>
+    </section>
+
+    <br />
+    <!-- Horizontal rule -->
+    <section>
+        <header>
+            <h2>Horizontal rule</h2>
+        </header>
+        <div>
+            <hr />
+        </div>
+    </section>
+</main>
+<footer></footer>
 </body>
 </html>
