--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -20,8 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Styleguide - Techium</title>
     <meta name="description" content="Techium is a digital agency" />
-    <link rel="icon" type="image/x-icon" href="./fav.ico/favicon.ico" />
-    <link rel="icon" type="image/png" href="./fav.ico/favicon-96x96.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
 <header></header>
